add and  delete row and insert data

--- a/index.html
+++ b/index.html
@@ -9,26 +9,18 @@
 <body>
 <h2>Sample Table</h2>
 <button onclick="addRow()">Add Row</button>
-<button onclick="submitColData()">Submit</button>
+<button onclick="submitRowData()">Submit</button>
 <table id="myTable">
     <thead>
         <tr>
             <th>Header 1</th>
             <th>Header 2</th>
             <th>Header 3</th>
+            <th></th>
         </tr>
     </thead>
     <tbody id="tbody">
-        <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-            <td>Data 3</td>
-        </tr>
-        <tr>
-            <td>Data 4</td>
-            <td>Data 5</td>
-            <td>Data 6</td>
-        </tr>
+        
     </tbody>
 </table>
 <script src="main.js"></script>
